Configuração de autenticação

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=EcommerceLite;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=EcommerceLite;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "TesteTecnicoIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TesteTecnico;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "TesteTecnicoContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TesteTecnico;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
